sun-java6 (6.32-2) unstable; urgency=low

  * Fix rules on certain locales (i.e. et_EE)

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Tue, 01 May 2012 17:05:45 +0000

sun-java6 (6.32-1) unstable; urgency=low

  * New upstream release
  * Remove demo package as it was split from upstream

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Thu, 26 Apr 2012 22:00:14 +0000

sun-java6 (6.31-2) unstable; urgency=low

  * Remove obsolete dependency information
  * Remove obsolete Ubuntu rules
  * Standards-Version updated to version 3.9.3
  * Change location of Lucida fonts
  * Remove unused rules targets and variables
  * Bring back shlibs:Depends in plugin

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Tue, 13 Mar 2012 00:45:48 +0100

sun-java6 (6.31-1) unstable; urgency=high

  * Fix lintian source package warnings
  * Update debhelper compatibility level to 6
  * Update java-common dependency to 0.28
  * New upstream release
  * SECURITY UPDATE: multiple upstream vulnerabilities. Upstream fixes:
   - (CVE-2012-0497): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0498): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0499): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0500): unspecified vulnerability fixed in 6u31 (Deployment)
   - (CVE-2012-0504): unspecified vulnerability fixed in 6u31 (Install)
   - (CVE-2011-3571): unspecified vulnerability in the Virtual Desktop
	              Infrastructure (Concurrency)
   - (CVE-2012-0503): unspecified vulnerability fixed in 6u31 (I18n)
   - (CVE-2012-0505): unspecified vulnerability fixed in 6u31 (Serialization)
   - (CVE-2012-0502): unspecified vulnerability fixed in 6u31 (AWT)
   - (CVE-2011-3563): unspecified vulnerability fixed in 6u31 (Sound)
   - (CVE-2011-5035): hash table implementations vulnerable to algorithmic
	              complexity attacks (Lightweight HTTP Server)
   - (CVE-2012-0501): unspecified vulnerability fixed in 6u31 (JRE)