@@ -1,187 +1,0 @@
-category truetype
-
-# Sans
-
-begin /usr/share/fonts/truetype/lucida/LucidaSansRegular.ttf
-  Family = LucidaSans
-  FontName = LucidaSans
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = SansSerif
-  Weight = Book
-  Width = Variable
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaSansDemiBold.ttf
-  Family = LucidaSans
-  FontName = LucidaSans-Demibold
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = SansSerif
-  Weight = Bold
-  Width = Variable
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaSansOblique.ttf
-  Family = LucidaSans
-  FontName = LucidaSans-Oblique
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = SansSerif
-  Weight = Thin
-  Width = Variable
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaSansDemiOblique.ttf
-  Family = LucidaSans
-  FontName = LucidaSans-Demibold-Oblique
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = SansSerif
-  Weight = Bold
-  Width = Variable
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
-
-# Serif
-
-begin /usr/share/fonts/truetype/lucida/LucidaBrightRegular.ttf
-  Family = LucidaBright
-  FontName = LucidaBright-Regular
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Roman
-  Weight = Book
-  Width = Variable
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaBrightItalic.ttf
-  Family = LucidaBright
-  FontName = LucidaBright-Italic
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Roman
-  Weight = Book
-  Width = Variable
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaBrightDemiBold.ttf
-  Family = Lucida-Bright
-  FontName = Lucida-Bright-Demi
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Roman
-  Weight = Bold
-  Width = Variable
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaBrightDemiItalic.ttf
-  Family = Lucida-Bright
-  FontName = Lucida-Bright-DemiItalic
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Roman
-  Weight = Demi
-  Width = Variable
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
-
-# Mono
-
-begin /usr/share/fonts/truetype/lucida/LucidaTypewriterRegular.ttf
-  Family = LucidaSans-Typewriter
-  FontName = LucidaSans-Typewriter
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Typewriter
-  Weight = Book
-  Width = Fixed
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaTypewriterOblique.ttf
-  Family = LucidaSans-Typewriter
-  FontName = LucidaSans-Typewriter-Oblique
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Typewriter
-  Weight = Book
-  Width = Fixed
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaTypewriterBold.ttf
-  Family = LucidaSans-Typewriter
-  FontName = LucidaSans-Typewriter-Bold
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Typewriter
-  Weight = Bold
-  Width = Fixed
-  Shape = NoSerif Upright
-  Foundry = Lucida
-  Priority = 15
-end
-
-begin /usr/share/fonts/truetype/lucida/LucidaTypewriterBoldOblique.ttf
-  Family = LucidaSans-Typewriter
-  FontName = LucidaSans-Typewriter-Bold-Oblique
-  Encoding = Unicode
-  Location = English
-  Charset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15 ISO10646-1
-  UniCharset = ISO8859-1 ISO8859-2 ISO8859-7 ISO8859-9 ISO8859-15
-  GeneralFamily = Typewriter
-  Weight = Bold
-  Width = Fixed
-  Shape = NoSerif Oblique
-  Foundry = Lucida
-  Priority = 15
-end
